# clbrobot_project

./: README.md
clb_msgs/: CMakeLists.txt  package.xml
clb_pid/: CMakeLists.txt  README.md  package.xml
clb_pid/cfg/: clbrobotPID.cfg
clb_pid/src/: clbrobot_pid_core.cpp  pid_configure.cpp  pid_listen.cpp
clbrobot/: CMakeLists.txt  package.xml
clbrobot/include/: clb_base.h
clbrobot/launch/: bringup.launch  camera.launch  clbrobot_bluetooth_contorl.launch  clbrobot_patrol_nav.launch  navigate.launch  navigate_teb.launch
clbrobot/launch/depth_camera/astra/: astra_laser.launch  astra_navigate.launch  astra_rgb.launch  astra_xtion_gmapping.launch
clbrobot/launch/include/cartographer/: cartographer_2d.launch
clbrobot/launch/include/imu/: imu.launch
clbrobot/launch/lidar/: lidar_laser.launch  lslidar_c16.launch  rplidar.launch
clbrobot/launch/multi_robot/: clbrobot_multi_follower.launch  clbrobot_multi_vel_follower.launch  robot_bringup.launch  teleop_twist.launch
clbrobot/launch/slam/: auto_slam.launch  cartographer_slam.launch  hector_slam.launch  karto_slam.launch  lidar_slam.launch
clbrobot/launch/web/: clbrobot_web.launch
clbrobot/maps/: cartographer_map.sh  house.pgm
clbrobot/param/ekf/: robot_localization.yaml
clbrobot/param/imu/: imu_calib.yaml
clbrobot/param/navigation/: base_local_planner_ackermann_params.yaml  base_local_planner_params.yaml  costmap_4wd_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  move_base_teb.xml  slam_gmapping.xml  xtion_gmapping.xml
clbrobot/rviz/: cartographer.rviz  depth_camera.rviz  laser.rviz  navigate.rviz  odometry.rviz  slam.rviz
clbrobot/script/: clbrobot_connect_bluetooth.py  clbrobot_patrol_nav.py  clbrobot_speed_listener.py  clbrobot_tf_broadcaster.py  clbrobot_tf_listener.py  show_mark.py
clbrobot/src/: clb_base.cpp  clb_base_node.cpp
clbrobot/urdf/: clbrobot_mecanum_urdf.urdf
clbrobot_ar_track/: CMakeLists.txt  package.xml
clbrobot_ar_track/calibration/camera_calibration/: camera.yaml  depth.yaml
clbrobot_ar_track/launch/: clbrobot_ar_astra_camera.launch  clbrobot_ar_astra_depth.launch  clbrobot_ar_camera.launch  clbrobot_ar_d435camera.launch  clbrobot_ar_d435depth.launch  clbrobot_ar_depth.launch  clbrobot_ar_follower.launch  clbrobot_ar_tags_cog.launch
clbrobot_ar_track/launch/astra/: astra_pro.launch
clbrobot_ar_track/nodes/: ar_follower.py  ar_tags_cog.py
clbrobot_ar_track/rviz/: clbrobot_ar_tags.rviz
clbrobot_follower/: CMakeLists.txt  package.xml
clbrobot_follower/launch/: follower.launch
clbrobot_follower/src/: follower.cpp
clbrobot_gesture_detect/: CMakeLists.txt  package.xml
clbrobot_gesture_detect/launch/: clbrobot_d435gesture_detect.launch  clbrobot_gesture_astra_detect.launch  clbrobot_gesture_detect.launch
clbrobot_gesture_detect/node/: clbrobot_gesture_detect.py
clbrobot_lidar_follower/: CMakeLists.txt  package.xml
clbrobot_lidar_follower/launch/: laser_follower.launch
clbrobot_lidar_follower/scripts/: follower.py  laserTracker.py
clbrobot_line_follower/: CMakeLists.txt  README.md  package.xml
clbrobot_line_follower/include/: clbrobot_line_detect.hpp
clbrobot_line_follower/launch/: camera.launch  clbrobot_line.launch
clbrobot_line_follower/src/: clbrobot_line.cpp  clbrobot_line_detect.cpp
clbrobot_model/clbrobot_mecanum_urdf/: CMakeLists.txt  package.xml
clbrobot_nav/: CMakeLists.txt  package.xml  setup.py
clbrobot_nav/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg
clbrobot_nav/nodes/: calibrate_angular.py  calibrate_linear.py  move_base_square.py  odom_out_and_back.py
clbrobot_object_detect/: package.xml
clbrobot_object_detect/launch/: clbrobot_face_object.launch  clbrobot_facehaar_object.launch  object_detect.launch
clbrobot_object_detect/node/: clbrobot_facehaar_detect.py  clbrobot_people_detect.py
clbrobot_object_follower/: CMakeLists.txt  package.xml
clbrobot_object_follower/launch/: clbrobot_ball_follower.launch  clbrobot_object_follower.launch
clbrobot_object_follower/node/: clbrobot_ball_follower.py  clbrobot_object_follower.py
clbrobot_tracker_servo/: CMakeLists.txt  package.xml
clbrobot_tracker_servo/launch/: clbrobot_fast_tracker_servo.launch  clbrobot_shoot.launch  clbrobot_slow_tracker_servo.launch
clbrobot_tracker_servo/node/: clbrobot_shoot.py  clbrobot_tracker_servo.py
video_language_navigation/: CMakeLists.txt  package.xml
video_language_navigation/launch/: clbrobot_ball_object.launch  clbrobot_facename_object.launch  clbrobot_people_object.launch  client.launch
video_language_navigation/node/: clbrobot_ball_detect.py  clbrobot_face_detect.py  clbrobot_facename_detect.py  client.py  object_detect.py
(+9 files in other folders)
